--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "chart.js": "^4.4.8",
     "dayjs": "^1.11.18",
     "localforage": "^1.10.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.27.0",
     "recharts": "^2.15.1",
     "sort-by": "^0.0.2"
