--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL=https://app.carenestpro.com 
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyBnqs-rNYWQE_7-f-M46XrXkuhV1waZ13s
+VITE_API_BASE_URL=https://backend.app.carenestpro.com
